--- a/index.ipynb
+++ b/index.ipynb
@@ -4,42 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [CesiumWidget](https://github.com/petrushy/CesiumWidget)\n",
-    "Try one of the examples below!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 5,
-     "output_type": "execute_result",
-     "metadata": {}
-    }
-   ],
-   "source": [
-    "# just generating the list here, nothing to see...\n",
-    "from IPython.display import Markdown\n",
-    "from glob import glob\n",
-    "Markdown(\"\\n\".join([\n",
-    "    '- ## <a href=\"Examples/{}.ipynb\" target=\"_blank\">{}</a>'.format(x[9:-6].replace(\"_\", \" \"), x)\n",
-    "    for x in sorted(glob(\"Examples/*.ipynb\"))\n",
-    "]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Screenshot\n",
-    "![](./screenshot.jpg)"
+    "# [OSGE-Notebooks](GSOC/notebooks/Introduction.ipynb)"
    ]
   }
  ],
@@ -59,7 +24,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
