--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [OSGeo-N - Open Source Geospatial Notebooks](GSOC/notebooks/Introduction.ipynb)"
+    "# [Open Source Geospatial Notebooks](GSOC/notebooks/Introduction.ipynb)"
    ]
   }
  ],
